adding style changes and bubble image

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ p {
 }
 
 .bubble-content {
-	font-size: 2vw;
+	font-size: 1rem;
 	align-self: center;
 	height: fit-content;
 	width: fit-content;
@@ -76,14 +76,13 @@ p {
 }
 
 .bubble {
-	background-color: rgb(105, 155, 249);
-	height: 95%;
-	width: 95%;
+	background: url(../GetOutOfYourBubble/images/bubble.png);
+	background-position: center;
+	height: 450px;
+	width: 450px;
 	border-radius: 50%;
 	justify-self: center;
 	align-self: center;
-	border: 1vw solid #ccc;
-	/* opacity: 0; */
 	display: flex;
 	justify-content: center;
 }
