--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .master-grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(3, 1fr);
-	background: url(/images/back_doug.png) fixed;
+	grid-template-rows: 25vh 50vh 25vh;
+	background: url(/images/back_doug.png) center / contain fixed;
 	height: 100%;
 	width: 100;
 	margin: 0%;
-	/* gap: 1vw; */
+
 }
 
 .form-container {
@@ -24,16 +24,16 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	grid-column-start: 2;
 	grid-row-start: 2;
 	background-color: rgb(105, 155, 249);
-	padding: 5vw;
-	margin: 1rem;
-	min-width: 50vw;
-	min-height: 50vw;
+	/* padding: 5vw; */
+	/* margin: 1rem; */
+	min-width: 50%;
+	min-height: 50%;
 	border-radius: 50%;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 button {
-	background-color: forestgreen;
+	background-color: #3c9be9;
 	border: none;
 	color: beige;
 	padding: 3vh 3vw;
@@ -45,16 +45,17 @@ button {
 	}
 
 button:hover {
-	background-color: #4CAF50; /* Green */
-    color: white;
+	background-color: #6eb4ed;
+    /* color: white; */
 	cursor: pointer;
+	opacity: 100%;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
 
 .form-objects {
 	margin: 1vw;
 	text-align: center;
-	opacity: 0;
+	/* opacity: 0; */
 }
 
 input.form-objects {
@@ -71,12 +72,12 @@ p {
 	font-size: 1rem;
 	align-self: center;
 	height: fit-content;
-	width: fit-content;
-
+	width: 75%;
+	text-align: center;
 }
 
 .bubble {
-	background: url(/images/bubble.png);
+	background: url(/images/bubble.png) no-repeat;
 	background-position: center;
 	height: 450px;
 	width: 450px;
@@ -85,12 +86,13 @@ p {
 	align-self: center;
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
 }
 
 .bubble:hover {
-    color: white;
+    color: navy;
 	opacity: 75%;
-	cursor: pointer;
+	cursor: crosshair;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
 
